--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
-    "@redhat-cloud-services/frontend-components-config-utilities": "^1.1.2",
     "babel-loader": "^8.2.2",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "html-webpack-plugin": "^5.3.1",
-    "jws": "^4.0.0",
-    "nodesi": "^1.16.0",
     "prettier": "^2.3.0",
     "source-map-loader": "^3.0.0",
     "webpack": "^5.37.1",
@@ -31,10 +28,7 @@
   "dependencies": {
     "@patternfly/react-core": "^4.121.1",
     "@patternfly/react-icons": "^4.10.7",
-    "@scalprum/core": "^0.0.11",
-    "@scalprum/react-core": "^0.0.17",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-dom": "^17.0.2"
   }
 }
